fix(sbb-calendar): fix wrong width when orientation changes in iOS

--- a/src/components/sbb-calendar/sbb-calendar.scss
+++ b/src/components/sbb-calendar/sbb-calendar.scss
@@ -142,6 +142,10 @@
 
 .sbb-calendar__table {
   width: 100%;
+
+  // Due to a Safari iOS bug we need to define min-width as well.
+  // After orientation change there is a wrong width otherwise.
+  min-width: 100%;
   border-collapse: collapse;
   height: max-content;
 
